--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,25 @@
 {
     "plugins": [
-      [
-        "@babel/plugin-proposal-class-properties",
-        {
-          "loose": true
-        }
-      ],
-      [
-        "@babel/plugin-transform-runtime",
-        {
-          "absoluteRuntime": false,
-          "corejs": 2,
-          "helpers": true,
-          "regenerator": true,
-          "useESModules": false
-        }
-      ]
+        [
+            "@babel/plugin-proposal-class-properties",
+            {
+                "loose": true
+            }
+        ],
+        [
+            "@babel/plugin-transform-runtime",
+            {
+                "absoluteRuntime": false,
+                "corejs": 2,
+                "helpers": true,
+                "regenerator": true,
+                "useESModules": false
+            }
+        ]
     ],
-    "presets": [["@babel/preset-env"]]
-  }
+    "presets": [
+        [
+            "@babel/preset-env"
+        ]
+    ]
+}
